Bug 422175 - New Users kcm: password dialog to confirm modifications in user account settings opens again after canceling
Summary: New Users kcm: password dialog to confirm modifications in user account setti...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_users (other bugs)
Version First Reported In: 5.18.90
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Janet Blackquill
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-05-28 12:49 UTC by Patrick Silva
Modified: 2020-07-30 20:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screen recording (1.66 MB, video/webm)
2020-05-28 12:50 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-05-28 12:49:13 UTC
STEPS TO REPRODUCE
1. open system settings > Users
2. click on your user account
3. modify any setting
4. click on "Apply" button
5. cancel the password dialog

OBSERVED RESULT
password dialog opens again

EXPECTED RESULT
password dialog should never open again after canceling

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.71.0
Qt Version: 5.14.2

ADDITIONAL INFORMATION
If the modified setting is the account's name (first field) or the "Email address" or the user avatar, canceling password dialog is ignored and the modification is applied anyway.
Comment 1 Patrick Silva 2020-05-28 12:50:16 UTC
Created attachment 128857 [details]
screen recording
Comment 2 Nate Graham 2020-06-10 22:06:13 UTC
Can confirm.
Comment 3 Bug Janitor Service 2020-07-29 22:43:06 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/88
Comment 4 Janet Blackquill 2020-07-30 20:16:22 UTC
Git commit 36e9218f6d221244d8675d5aa05e7d8317d52410 by Carson Black.
Committed on 30/07/2020 at 20:15.
Pushed by cblack into branch 'master'.

[kcms/users] Bail out on trying to apply user when an error encounters

While there's not a graceful way to discern between user cancellation and an actual error,
the former is more likely so we bail out when encountering an error.

M  +9    -1    kcms/users/src/user.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/36e9218f6d221244d8675d5aa05e7d8317d52410