[kcms/users] Bail out on trying to apply user when an error encounters

While there's not a graceful way to discern between user cancellation and an actual error,
the former is more likely so we bail out when encountering an error.

BUG: 422175